﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS
	Added php5-json package ( Debian Jessie )

INSTALLER
	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )

------------------------------------------------------------------------------------------------------------------------
1.1.21
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.1.21

CONFIGS
	Changed: Dovecot becomes the default choice for POP3/IMAP servers

DISTROS
	Removed: Support for obsolete Ubuntu versions ( Quantal Quetzal, Raring Ringtail, Saucy Salamander )

ENGINE
	Changed: Remove apache log directory on domain deletion
	Fixed: Logs directory is not created in some contexts ( apache_itk )

GUI
	Fixed: Admin logs default order ( last in, first out )
	Fixed: Customer data get updated even when passwords do not match ( reseller/user_edit.php )
	Fixed: error_reporting directive value remain to default option when set to 0 ( admin/settings.php )
	Fixed: Ignore orphaned users ( users without domain ) when editing reseller

INSTALLER
	Changed: Installation of the libapache2-mpm-itk package is now delayed to avoid dpkg configuration errors
	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )
	Fixed: Missing mcrypt PHP module error on fresh installation ( Trusty Tahr )
	Fixed: Prefill debconf database for the dovecot-core/create-ssl-cert question ( Dovecot )

PLUGINS
	Added: plugin_locked attribute which allow a plugin to lock another plugin for deletion
	Updated: Plugin API to version 0.2.15

TICKETS