@@ -8,7 +8,9 @@ CONFIGS
 	Added php5-json package ( Debian Jessie )
 
 INSTALLER
+	Fixed: Migration from Courier to Dovecot is broken ( courier-dovecot-migrate.pl is run with a wrong option )
 	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )
+	Fixed: Unable to define custom APT repository without key ( Debian, Ubuntu )
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.21
